service/tests/requests/snapshots/auth/when_password_contains_whitespace_char_registration_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"password\":\"password cannot have spaces\"}}",
)
