service/tests/requests/snapshots/auth/when_password_is_wrong_login_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(),response.text())"
---
(
    401,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"The email address or password is incorrect.\",\"code\":\"invalid_credentials\"}",
)
