service/tests/requests/snapshots/auth/when_passwords_do_not_match_registration_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"confirm_password\":\"Passwords do not match\"}}",
)
