service/tests/requests/snapshots/auth/when_reset_token_is_missing_password_reset_fails@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 400
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    404,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"Entity not found\"}",
)
