service/tests/requests/snapshots/auth/when_token_subject_does_not_exist_current_user_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    404,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"Entity not found\",\"code\":\"entity_not_found\"}",
)
