service/tests/requests/snapshots/auth/when_verification_token_is_already_used_email_verification_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Entity not found\",\"code\":\"entity_not_found\"}",
)
