service/tests/requests/snapshots/auth/when_verification_token_is_missing_email_verification_fails@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 277
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Entity not found\"}",
)
